# wiki-extractor

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  __init__.py  basic_usage.py  main.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  setup.py  test.py
.github/workflows/: test.yml
cli/: basic_usage.py
scripts/: lint.sh  security.sh  test.sh  type.sh
src/wiki_extractor/: extractor.py
src/wiki_extractor/templates/: magic_words.py  parser_functions.py  template_engine.py  template_processor.py
src/wiki_extractor/utils/: html_clean.py  link_clean.py  math_clean.py  table_clean.py  template_clean.py  text_clean.py
tests/: __init__.py  test_extractor.py  test_main.py  test_text_cleaner.py
wiki_extractor/: __init__.py  extractor.py  template_processor.py
wiki_extractor/config/: __init__.py  config.py  settings.py
wiki_extractor/parsers/: __init__.py  html_processor.py  link_processor.py  math_processor.py  text_cleaner.py
wiki_extractor/templates/: __init__.py  magic_words.py  template_engine.py
wiki_extractor/utils/: __init__.py  parser_functions.py  regex_patterns.py  text_utils.py  utils.py
